feature : Add ActivityLog Domain refactor : Badge/BadgeMember Domain